...

    var body: some View {
        ZStack {
            TabView(selection: $selectedTab) {
                ScoreEntryView()
                    .tabItem {
                        Label("Score", systemImage: "pencil.circle.fill")
                            .accessibilityIdentifier("tab_Score")
                    }
                    .tag(0)

                StatisticsView()
                    .tabItem {
...
